[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/TinyCubeEnemy.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=1]

[node name="TinyCubeEnemy" type="Area2D"]
script = ExtResource( 1 )

[node name="ThrustParticle" type="Particles2D" parent="."]
amount = 200
process_material = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ZigZagTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="timeout" from="ZigZagTimer" to="." method="_on_ZigZagTimer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
